--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<header id="header">
 
 				<!-- Logo -->
-					<h1 id="logo">Abhishek Shrama</h1>
+					<h1 id="logo">Abhishek Sharma</h1>
 				
 				<!-- Nav -->
 					<nav id="nav">
