Portfolio Info updated

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 				<header>
 					<h2>What I Do</h2>
 				</header>
-				<p>I work as a freelancer and do the projects related to PHP, CSS, JavaScript, MySql and a bunch of few others. I resolve issues related to CSS and can modify the your current web pages. I also have experience in apache server configuration. In the free time I generally google stuff and a bit of social networking.</p>
+				<p>Currently I am working as a Software Developer in a Bangalore based startup. 
+					I've also worked as a freelancer and delivered projects related to PHP, CSS, JavaScript, MySql and a bunch of few others technologies. 
+					Also, I've experience in apache server configuration, GIT, Unix, EC2 etc. In the free time I generally google stuff or dive in Stackoverflow and a bit of social networking.</p>
 			</div>
 			<a href="#two" class="button style2 down anchored">Next</a>
 		</section>
@@ -69,8 +71,8 @@
 				<header>
 					<h2>Who I Am</h2>
 				</header>
-				<p>I am a curious creature who is attracted towards technical stuff and web based technologies.
-					I am currently persuing my graduation in Computer Science and Engineering and will be graduated in 2015.</p>
+				<p>I am a curious creature who is attracted towards technical stuff and web based technologies. 
+					I have completed my graduation in Computer Science and Engineering in 2015.</p>
 			</div>
 			<a href="#work" class="button style2 down anchored">Next</a>
 		</section>
@@ -80,7 +82,9 @@
 			<div class="content container">
 				<header>
 					<h2>My Skills</h2>
-					<p>I have experience in PHP, HTML, CSS3 (Bootstrap3 css framework), JavaScript, Linux, Apache Web Server.<br/>I Have also worked in Python2.7 and flask web framework. I am also very much familieer with the MongoDB and MySql Databases.<br/> Here are some of my certifications.</p>
+					<p>I've experience in PHP, HTML, CSS3 (Bootstrap3 css framework), JavaScript, Linux, Apache Web Server.
+						I've also worked in Python2.7 and flask web framework. I am also familieer with the MongoDB and MySql Databases.
+						<br/>Here are some of my certifications.</p>
 				</header>
 
 				<!-- Lightbox Gallery  -->
