Updated contact email

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<div class="box container small" id="cform">
 					<!-- Contact Form -->
 					<div class="well">
-						<h4>Ping me : me [at] abhisheksharma.me</h4>
+						<h4>Ping me : contact [at] abhisheksharma.me</h4>
 					</div>
 				</div>
 			</div>
@@ -127,9 +127,9 @@
 				<li><a href="https://twitter.com/_abhishek911" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="https://facebook.com/abhisheksharma93" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 				<li><a href="https://plus.google.com/+AbhishekSharma93" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-				<!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-				<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-				<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
+				<li><a href="https://stackoverflow.com/users/2650209/abhishek-sharma" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
+				<li><a href="https://stackoverflow.com/abhisheksharma14" class="icon fa-github"><span class="label">Pinterest</span></a></li>
+				<!--<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
 			</ul>
 			<!-- Menu -->
 			<ul class="menu">
