--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				<li><a href="https://facebook.com/abhisheksharma93" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 				<li><a href="https://plus.google.com/+AbhishekSharma93" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 				<li><a href="https://stackoverflow.com/users/2650209/abhishek-sharma" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
-				<li><a href="https://stackoverflow.com/abhisheksharma14" class="icon fa-github"><span class="label">Pinterest</span></a></li>
+				<li><a href="https://github.com/abhisheksharma14" class="icon fa-github"><span class="label">Pinterest</span></a></li>
 				<!--<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
 			</ul>
 			<!-- Menu -->
