--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<header>
 					<h2>Hey.</h2>
 				</header>
-				<p>Hi, My name is <strong>Abhishek Sharma </strong>and I am a web-designer and developer living in India.<br/> I design Web Applications and User Interfaces. I also do retouching work. </p>
+				<p>Hi, My name is <strong>Abhishek Sharma </strong>and I am a web-developer and designer living in India.<br/> I devlop Web Applications and User Interfaces. I also do retouching work. </p>
 				<footer>
 					<a href="#one" class="button style2 down">More</a>
 				</footer>
@@ -58,9 +58,9 @@
 				<header>
 					<h2>What I Do</h2>
 				</header>
-				<p>Currently I am working as a Software Developer in a Bangalore based startup. 
-					I've also worked as a freelancer and delivered projects related to PHP, CSS, JavaScript, MySql and a bunch of few others technologies. 
-					Also, I've experience in apache server configuration, GIT, Unix, EC2 etc. In the free time I generally google stuff or dive in Stackoverflow and a bit of social networking.</p>
+				<p>Currently I am working as a Full Stack Developer in a Gurgaon based startup. 
+					I've also worked as a freelancer and delivered projects. I have considerable experience in NodeJS, PHP, ReactJS, CSS, MySql, MongoDB and other web technologies.
+					Also, I've worked on apache server configuration, GIT, Unix, EC2, JIRA, TDD etc. In the free time I generally google stuff or dive in Stackoverflow and a bit of social networking.</p>
 			</div>
 			<a href="#two" class="button style2 down anchored">Next</a>
 		</section>
@@ -82,8 +82,8 @@
 			<div class="content container">
 				<header>
 					<h2>My Skills</h2>
-					<p>I've experience in PHP, HTML, CSS3 (Bootstrap3 css framework), JavaScript, Linux, Apache Web Server.
-						I've also worked in Python2.7 and flask web framework. I am also familieer with the MongoDB and MySql Databases.
+					<p>I've experience in NodeJS, ReactJS, PHP, HTML, CSS3 (and frameworks such as Bootstrap3), ES5 ES6, Linux, Apache Web Server, TDD.
+						I've also worked in Python2.7 and flask web framework. I am also familiar with the MySql and MongoDB Databases.
 						<br/>Here are some of my certifications.</p>
 				</header>
 
@@ -124,11 +124,12 @@
 		<footer id="footer">
 			<!-- Icons -->
 			<ul class="actions">
-				<li><a href="https://twitter.com/_abhishek911" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="https://facebook.com/abhisheksharma93" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-				<li><a href="https://plus.google.com/+AbhishekSharma93" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-				<li><a href="https://stackoverflow.com/users/2650209/abhishek-sharma" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
-				<li><a href="https://github.com/abhisheksharma14" class="icon fa-github"><span class="label">Pinterest</span></a></li>
+				<li><a href="https://www.linkedin.com/in/abhisheksharma94" target="_blank" class="icon fa-linkedin"><span class="label">Linked In</span></a></li>
+				<li><a href="https://github.com/abhisheksharma14" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+				<li><a href="https://stackoverflow.com/users/2650209/abhishek-sharma" target="_blank" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
+				<!-- <li><a href="https://twitter.com/_abhishek911" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+				<!-- <li><a href="https://facebook.com/abhisheksharma93" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+				<li><a href="https://plus.google.com/+AbhishekSharma93" target="_blank" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
 				<!--<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
 			</ul>
 			<!-- Menu -->
